set up for render

--- a/mail/newsletter.html
+++ b/mail/newsletter.html
@@ -25,43 +25,23 @@
           <td align="center" style="padding:20px;">
             <img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/540434725_1332777955082585_4387017843931180199_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=f727a1&_nc_ohc=c4csyL5_SowQ7kNvwHQWmDp&_nc_oc=AdlnQFxaraEH79y0I-HlHzAfrLjB5Tm3edBUONWez0P2Ee9oZAeKFUURlaq0S6FykLo&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=4S6G1flLOtBA50Edji-H0w&oh=00_AfZkFVoCro5-Jd7CG74E74UKSm7cM1y0Dysght7gN1GEDQ&oe=68C63B9A" alt="Baltazar i Čarobni stroj" width="100%" style="border-radius:12px;border:1px solid #FFD65A;display:block;margin-bottom:10px;">
             <h2 style="font-size:22px;color:#3E8E52;margin:0;">
-                <a href="{{trackable_link}}" style="color:#3E8E52;text-decoration:none;">
+                <a href="{{trackable_link_hero}}" style="color:#3E8E52;text-decoration:none;">
                   Doživite <strong>Baltazargrad</strong>!
                 </a>
               </h2>
-                        </td>
+          </td>
         </tr>
 
         <!-- CONTENT -->
         <tr>
           <td style="padding:20px 30px;line-height:1.6;color:#000000;">
             <p>Poštovani,</p>
+            <p>Predstavljamo vam <strong style="color:#3E8E52;">Grad profesora Baltazara</strong>! <strong style="color:#3E8E52;">Baltazargrad</strong> je jedinstvena <strong>edukativno-kulturna atrakcija</strong>...</p>
 
-            <p>Predstavljamo vam <strong style="color:#3E8E52;">Grad profesora Baltazara</strong>! <strong style="color:#3E8E52;">Baltazargrad</strong> je jedinstvena <strong>edukativno-kulturna atrakcija</strong> koja spaja <strong>znanost, umjetnost i zabavu</strong>. Riječ je o mobilnoj atrakciji osmišljenoj da obogati manifestacije, festivale i gradske programe te da svakom događanju doda <strong>prepoznatljiv sadržaj</strong> koji privlači <strong>obitelji s djecom i mlade</strong>.</p>
-
-            <p>U <strong style="color:#3E8E52;">Baltazargradu</strong> posjetitelje očekuje svijet legendarnog profesora Baltazara. <strong>Svjetleći Čarobni stroj</strong>, <strong>znanstveni show programi</strong>, <strong>kreativne radionice</strong> i <strong>prijateljske maskote</strong> pretvaraju prostor u doživljaj koji podsjeća na ulazak u crtani film u kojem znanost poprima oblik <strong>čarolije</strong>. Svaki trenutak osmišljen je da istodobno zabavi i potakne na istraživanje i otkrića. Kombinacija <strong>mašte i znanosti</strong> ostavlja snažan dojam i stvara <strong>trajne uspomene</strong>.</p>
-
-            <p>Naše djelovanje temelji se na obrazovnoj i društvenoj misiji:</p>
-            <ul style="margin:0 0 10px 20px;padding:0;">
-              <li><strong style="color:#3E8E52;">UN SDG Ciljevi održivog razvoja:</strong> približavamo djeci teme <strong>zaštite okoliša, zdravlja, jednakosti i održivih zajednica</strong> kroz igru i praktične zadatke.</li>
-              <li><strong style="color:#3E8E52;">STREAM + AI:</strong> kroz integraciju <strong>znanosti, tehnologije, inženjerstva, umjetnosti, čitanja i matematike</strong> potičemo djecu da istražuju, razmišljaju kritički i razvijaju kreativnost.</li>
-            </ul>
-
-            <p>S ponosom najavljujemo naš nastup na <strong style="color:#3E8E52;">Znanstvenom pikniku 3. i 4. listopada 2025.</strong> gdje će svi posjetitelji moći zakoračiti u <strong style="color:#3E8E52;">Baltazargrad</strong>, kao što su brojni posjetitelji već učinili na ovogodišnjem <strong style="color:#3E8E52;">Špancirfestu</strong>.</p>
-
-            <p>Za više informacija i video materijale, posjetite <a href="https://www.baltazargrad.com?utm_source=brevo&utm_campaign=Baltazargrad dopis - TZ 2025&utm_medium=email" target="_blank" style="color:#3E8E52;text-decoration:none;"><strong>www.baltazargrad.com</strong></a>.</p>
-
-            <p>Ovim putem vas <strong style="color:#3E8E52;">srdačno pozivamo</strong> da nas posjetite i doživite njegov potencijal – atrakciju koja <strong>privlači publiku</strong>, <strong>stvara oduševljenje</strong> i <strong>podiže svaku manifestaciju na višu razinu</strong>.</p>
-
-            <p><strong>Baltazargrad nije samo edukativan</strong> – on je <strong style="color:#3E8E52;">simbol igre, znanja i dobrote</strong>, a svojim sadržajem gradi most između tradicije i suvremenih trendova u edukaciji i turizmu. Sigurni smo da bi upravo u Vašoj zajednici mogao postati vrijedan doprinos <strong>kulturno-turističkoj ponudi</strong> te razlog zbog kojeg bi posjetitelji sa znatiželjom dolazili, a s veseljem se vraćali.</p>
-
-            <p>Radujemo se prilici za razgovor i suradnju te stojimo na raspolaganju za sve dodatne informacije!</p>
-
-            <p>Srdačan pozdrav,<br>
-            <strong style="color:#3E8E52;">Baltazargrad tim</strong></p>
+            <p>Za više informacija i video materijale, posjetite <a href="{{trackable_link_main}}" target="_blank" style="color:#3E8E52;text-decoration:none;"><strong>www.baltazargrad.com</strong></a>.</p>
 
             <p style="text-align:center;">
-              <a href="https://www.baltazargrad.com?utm_source=brevo&utm_campaign=Baltazargrad dopis - TZ 2025&utm_medium=email" style="display:inline-block;padding:12px 25px;background-color:#FF8C42;color:white;text-decoration:none;border-radius:12px;font-weight:bold;">Doživite Baltazargrad!</a>
+              <a href="{{trackable_link_cta}}" style="display:inline-block;padding:12px 25px;background-color:#FF8C42;color:white;text-decoration:none;border-radius:12px;font-weight:bold;">Doživite Baltazargrad!</a>
             </p>
           </td>
         </tr>
@@ -72,19 +52,19 @@
             <table cellpadding="0" cellspacing="0" border="0" align="center" style="max-width:750px; width:100%;">
               <tr>
                 <td align="center" style="padding:5px; width:33.33%;">
-                  <img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/541094668_1332212078472506_5295990694953446019_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=f727a1&_nc_ohc=SZD63O4IoDEQ7kNvwEbAtkp&_nc_oc=AdnroQKIVV1CH796Gormy9RvsZH_YWaqBRNrqKpqeXlRPJZK8v3W6kIvmPLc-GpYeos&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=OLP2UgVHq2Ul3Cd31yIqKw&oh=00_AfZ0ApHpiSTt2ovoXXfU1n-hSXcSIEwr1v48almBj3P_ug&oe=68C6182F" 
+                  <a href="{{trackable_link_image1}}"><img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/541094668_1332212078472506_5295990694953446019_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=f727a1&_nc_ohc=SZD63O4IoDEQ7kNvwEbAtkp&_nc_oc=AdnroQKIVV1CH796Gormy9RvsZH_YWaqBRNrqKpqeXlRPJZK8v3W6kIvmPLc-GpYeos&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=OLP2UgVHq2Ul3Cd31yIqKw&oh=00_AfZ0ApHpiSTt2ovoXXfU1n-hSXcSIEwr1v48almBj3P_ug&oe=68C6182F" 
                        alt="Baltazargrad 1" 
-                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;">
+                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;"></a>
                 </td>
                 <td align="center" style="padding:5px; width:33.33%;">
-                  <img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/539102675_1330339388659775_1703285268713935571_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=f727a1&_nc_ohc=TW1OAIRFOlAQ7kNvwE8Bp54&_nc_oc=Adn38ItETrNJKD-kOh4PAdxji0uQ191tpGIj2klr78D9Sp23PaNY8AuAhUnW0Cnl7iE&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=BQdkbWc5hVK66qKY70y5Jg&oh=00_AfZ0ZtuIXupwaDkh5ZehXAcZezM_jt97IfxKvwQ-dC9FXg&oe=68C61574" 
+                  <a href="{{trackable_link_image2}}"><img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/539102675_1330339388659775_1703285268713935571_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=f727a1&_nc_ohc=TW1OAIRFOlAQ7kNvwE8Bp54&_nc_oc=Ad38ItETrNJKD-kOh4PAdxji0uQ191tpGIj2klr78D9Sp23PaNY8AuAhUnW0Cnl7iE&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=BQdkbWc5hVK66qKY70y5Jg&oh=00_AfZ0ZtuIXupwaDkh5ZehXAcZezM_jt97IfxKvwQ-dC9FXg&oe=68C61574" 
                        alt="Baltazargrad 2" 
-                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;">
+                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;"></a>
                 </td>
                 <td align="center" style="padding:5px; width:33.33%;">
-                  <img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/539035304_1459122689325275_1544113039876936204_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=-8znhmmEAeoQ7kNvwFR8vWQ&_nc_oc=Adm5Q_OcCGWA3HJn4MUg67Y-JS7Says1z8MusZ2OnjvXoxyRQIiQ-TjPI91n4aCrYII&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=0t0cTaNq1tuDXR0q5gpdvA&oh=00_AfYjbHrh2-pOQwRHI3gE9Z1Np2gJtKW1xZPUG_pHSj5eew&oe=68C61749" 
+                  <a href="{{trackable_link_image3}}"><img src="https://scontent.fzag5-1.fna.fbcdn.net/v/t39.30808-6/539035304_1459122689325275_1544113039876936204_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=-8znhmmEAeoQ7kNvwFR8vWQ&_nc_oc=Adm5Q_OcCGWA3HJn4MUg67Y-JS7Says1z8MusZ2OnjvXoxyRQIiQ-TjPI91n4aCrYII&_nc_zt=23&_nc_ht=scontent.fzag5-1.fna&_nc_gid=0t0cTaNq1tuDXR0q5gpdvA&oh=00_AfYjbHrh2-pOQwRHI3gE9Z1Np2gJtKW1xZPUG_pHSj5eew&oe=68C61749" 
                        alt="Baltazargrad 3" 
-                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;">
+                       style="border-radius:8px; display:block; width:100%; max-width:240px; height:180px; object-fit:cover; border:2px solid #FF9B2E;"></a>
                 </td>
               </tr>
             </table>
@@ -97,11 +77,7 @@
             © 2025 <strong style="color:#3E8E52;">Baltazargrad</strong> | <a href="mailto:stream@baltazargrad.com" style="color:#3E8E52;text-decoration:none;">stream@baltazargrad.com</a>
             <br><br>
             <small>
-              Git d.o.o. V. Lisinskog 6, 42000 Varaždin | <a href="https://www.git.hr?utm_source=brevo&utm_campaign=Baltazargrad dopis - TZ 2025&utm_medium=email" target="_blank" style="color:#3E8E52;text-decoration:none;">www.git.hr</a> | OIB: 83058532881 | tel: ++385 (42) 211 877
-              <br>
-              Društvo je upisano u Trgovački sud u Varaždinu po broju MB: 3528618, Temeljni kapital 3.185.350,00 kuna uplaćen u cijelosti, Direktor i član uprave: Denis Terzić, zastupa društvo pojedinačno i samostalno
-              <br>
-              RBA IBAN: HR7524840081100477967 | Erste IBAN: HR4024020061101113238
+              Git d.o.o. V. Lisinskog 6, 42000 Varaždin | <a href="https://www.git.hr" target="_blank" style="color:#3E8E52;text-decoration:none;">www.git.hr</a> | OIB: 83058532881 | tel: ++385 (42) 211 877
             </small>
           </td>
         </tr>
@@ -111,8 +87,8 @@
   </tr>
 </table>
 
-<!-- Tracking pixel za praćenje otvaranja -->
-<img src="https://4760b7921eea.ngrok-free.app/track_open?email=test@example.com" width="1" height="1">
+<!-- Tracking pixel -->
+<img src="{{tracking_pixel}}" width="1" height="1">
 
 </body>
 </html>
