--- a/server/mail/test.html
+++ b/server/mail/test.html
@@ -22,6 +22,9 @@
     <div class="footer">
       © 2025 Vaša tvrtka
     </div>
+        <div class="footer">
+      © 2025 Vaša tvrtka
+    </div>
   </div>
 </body>
 </html>
